First commited as before_103058_rev1